<resources>
    <string name="app_name">TFGwallet</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome to your wallet!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="BLOCKCHAIN_IP">https://rpc2.sepolia.org</string>
    <string name="IPFS_IP">http://192.168.0.16:5001/api/v0/</string>
    <string name="GASNOW_API_IP">https://sepolia.beaconcha.in/api/v1/execution/gasnow</string>
    <string name="no_keys">There aren\'t any keys at the moment.</string>
    <string name="enable_2af">Enable 2AF in future accesses</string>
    <string name="pick_mnemonic">Select mnemonic word</string>
    <string name="mnemonics_hint">Here your mnemonics…</string>
    <string name="delete_last">Delete last</string>
    <string name="delete_all">Delete all</string>
    <string name="number_mnemonic_words">Words: %1$d</string>
</resources>